--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hotkeys-hook": "^5.1.0",
     "react-tabs": "^6.1.0",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
